# crypto-price-prediction

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  kubeconfig  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml
deployments/dev/kind/manifests/: kafka-ui-all-in-one.yaml
docker-compose/: Makefile  inference-live.yml  news-signal-historical.yml  news-signal-live.yml  technical-indicators-historical.yml  technical-indicators-live.yml
services/candles/: .env  Dockerfile  Makefile  historical.settings.env  pyproject.toml  run.py  settings.env
services/candles/src/candles/: config.py  main.py
services/candles/state/candles_consumer_group/tumbling_window_60000_reduce/trades/0/: 000015.sst  000016.sst  000017.sst  000018.sst  000026.sst  000027.sst  000028.sst  000029.sst  000037.sst  000038.sst  000039.sst  000040.sst  IDENTITY  LOG  LOG.old.1766346022805067  LOG.old.1766406781796132  MANIFEST-000033
services/candles/tests/: test_candle.py
services/monitoring-service/: Dockerfile  Makefile  config.py  dashboard.html  drift.py  pyproject.toml  run.py  settings.env
services/monitoring-service/tests/: test_drift.py
services/news/: Makefile  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env
services/news-signal/: Makefile  config.py  fine_tuning.py  golden_dataset.py  historical.settings.env  pyproject.toml  run.py  settings.env
services/news-signal/data/: instruction_dataset_ollama.jsonl  instruction_dataset_ollama_10k.jsonl
services/news-signal/llms/: base.py  claude.py  config.py  dummy.py  ollama.py
services/news/sources/: factory.py  historical_data_source.py  news.py  news_downloader.py
services/prediction-api/: Cargo.toml  Dockerfile  Makefile  main.py  pyproject.toml  settings.env
services/prediction-api/src/: lib.rs
services/price-predictor/: Makefile  backfill_news_signals.py  config.py  feature_reader.py  fix_feature_view.py  inference.py  inference.settings.env  price_predictor.py  pyproject.toml  sinks.py  training.py  training.settings.env
services/price-predictor/models/: light_gbm_model.py  xgboost_model.py
services/price-predictor/tests/: test_feature_reader.py  test_price_predictor.py
services/technical-indicators/: Dockerfile  Makefile  candle.py  config.py  historical.settings.env  pyproject.toml  run.py  technical_indicators.py
services/to-feature-store/: Dockerfile  Makefile  config.py  historical.settings-news-signal.env  historical.settings.env  live.settings.env  live.settings.news-signal.env  pyproject.toml  run.py  settings.env  sinks.py  test.py
services/trades/: .env  Dockerfile  Makefile  config.py  historical.settings.env  main.py  naive.Dockerfile  onestage.Dockerfile  pyproject.toml  run.py  settings.env
services/trades/kraken_api/: mock.py  rest.py  trade.py  websocket.py
services/trades/src/trades/: config.py  kraken_api.py  main.py
services/trades/tests/: test_trade.py
state/quixstreams-default/tumbling_window_60000_reduce/trades/0/: LOG  (+13 more)
(+10 files in other folders)
