[project]
name = "candles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hritik0607", email = "hritikjaiswal6798@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
