[project]
name = "monitoring-service"
version = "1.0.0"
description = "Monitors model performance — computes prediction errors and serves dashboard"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.0.0",
    "confluent-kafka>=2.0.0",
]