[project]
name = "price-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comet-ml>=3.57.3",
    "elasticsearch>=8.0.0,<9.0.0",
    "hopsworks==4.7.3",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "optuna>=4.8.0",
    "pandas>=2.0.0",
    "pyarrow>=23.0.1",
    "pydantic-settings>=2.10.1",
    "quixstreams>=3.23.1",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
